--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -15,4 +15,9 @@ dependencies:
     # Pip-only installs
   #- pip:
   #  - codecov
+  - numpy
+  - networkx
+  - matplotlib
+  - pytest
+  - pytest-cov
 
